--- a/sealed_app/.sops.yaml
+++ b/sealed_app/.sops.yaml
@@ -1,5 +1,5 @@
 creation_rules:
-  - path_regex: sealed.yaml$
+  - path_regex: deployment.yaml$
     encrypted_regex: "^(containers)$"
     pgp: >-
       F21681FB17B40B7FFF573EF3F300795590071478
